--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,8 @@
 name: Release Browser Extension
 on:
     push:
-        tags:
-            - v*
+        branches:
+            - main
 
 jobs:
     Publish:
