--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,10 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+            - uses: actions/checkout@v4
+
+            - uses: pnpm/action-setup@v3 # Install pnpm using packageManager key in package.json
+
             - name: Use Node.js 19
               uses: actions/setup-node@v4
               with:
